# rust-experiments

./: .gitignore  README.md
directory_lister/: Cargo.toml
directory_lister/src/: main.rs
image_asset_server/: Cargo.toml
image_asset_server/src/: config.rs  main.rs
image_conversion/: .env  Cargo.toml  README.md  cli-guide.md  sequence-diagram-doc.md
image_conversion/documentation/: cli-guide.md
image_conversion/images/: eddie-alien.avif
image_conversion/src/: main.rs
leptos-hello-world/: Cargo.toml  README.md  Trunk.toml  index.html  package-lock.json  package.json
leptos-hello-world/src/: main.rs
leptos-hello-world/styles/: output.css
leptos-pomodoro/: .gitignore  Cargo.toml  README.md  Trunk.toml  index.html  package-lock.json  package.json
leptos-pomodoro/src/: main.rs  pomodoro_timer.rs  tomato_icon.rs
leptos-pomodoro/styles/: output.css
leptos-shopping-cart/: Cargo.toml  README.md  Trunk.toml  index.html  package-lock.json  package.json
leptos-shopping-cart/json-server/api/: db.json
leptos-shopping-cart/src/: main.rs
leptos-shopping-cart/src/components/: app.rs  mod.rs  product_detail_view.rs  product_listing_view.rs  shopping_cart_view.rs
leptos-shopping-cart/src/types/: mod.rs
leptos-shopping-cart/styles/: output.css
leptos-todo/: Cargo.toml  README.md  Trunk.toml  index.html  package-lock.json  package.json  tailwind.config.js
rust-axum-api/: Cargo.toml  README.md  docker-compose.yml
rust-axum-api/documentation/: database-migrations.md  open-api.md
rust-axum-api/migrations/: 20241113094600_initial_setup.down.sql  20241113094600_initial_setup.sql  20241113094601_create_user.down.sql  20241113094601_create_user.sql  20241113094602_create_sessions.down.sql  20241113094602_create_sessions.sql
rust-axum-api/src/: error.rs  lib.rs  main.rs  routes.rs
rust-axum-api/src/handlers/: health_handlers.rs  mod.rs  user_handlers.rs
rust-axum-api/src/models/: error_response.rs  message.rs  mod.rs  session.rs  user.rs
toxiproxy-clone/: Cargo.toml  README.md
toxiproxy-clone/scratch/clap/: README.md  toxiproxy-cli.rs
toxiproxy-clone/scratch/initial/: README.md  toxiproxy-clone.rs
toxiproxy-clone/scratch/prometheus-metrics/: README.md  toxiproxy-metrics.rs
toxiproxy-clone/scratch/rest-api/: README.md  toxiproxy-rest-api.rs
toxiproxy-clone/src/: args.rs  main.rs  proxy.rs  rest_api.rs  toxic.rs
toxiproxy-clone/src/toxics/: corrupt.rs  latency.rs  mod.rs  slow_close.rs
(+9 files in other folders)
