[package]
name = "leptos-shopping-cart"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.7.2", features = ["csr"] }
console_error_panic_hook = "0.1"
console_log = "1"
log = "0.4"
wasm-bindgen = "0.2"

[dev-dependencies]
wasm-bindgen-test = "0.3.49"
web-sys = { version = "0.3.76", features = ["HtmlElement"] }
