[package]
name = "rust_axum_api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
bcrypt = "0.15.1"
bytes = "1.0"
chrono = { version = "0.4.38", features = ["serde"] }
dotenv = "0.15"
hex = "0.4.3"
http-body-util = "0.1"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8.2", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }
time = { version = "0.3", features = ["serde"] }
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.6.1", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
utoipa = { version = "5.2.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "8.0.3", features = ["axum"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

[dev-dependencies]
sqlx-cli = "0.8.2"
tower = { version = "0.5.1", features = ["util"] }
