[package]
name = "toxiproxy-clone"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.9"
rand = "0.9.0-alpha.2"
serde = { version = "1.0.215", features = ["derive"] }
tokio = "1.41.1"
tower-http = { version = "0.6.1", features = ["cors"] }
clap = { version = "4.5.21", features = ["derive"] }

